# django-cachex

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  REQUIREMENTS.md  TODO.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml  publish.yml  tag.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/migration/: index.html
0.1.0/recipes/: index.html
0.1.0/search/: search_index.json
0.1.0a1/: 404.html  index.html  sitemap.xml
0.1.0a3/: 404.html  index.html  sitemap.xml
0.1.0a3/migration/: index.html
0.1.0a3/recipes/: index.html
0.1.0a4/: 404.html  index.html  sitemap.xml
0.1.0a4/migration/: index.html
0.1.0a4/recipes/: index.html
0.1.0b1/: 404.html  index.html  sitemap.xml
0.1.0b1/migration/: index.html
0.1.0b1/recipes/: index.html
0.1.0b1/search/: search_index.json
0.1.0b2/: 404.html  index.html  sitemap.xml
0.1.0b2/migration/: index.html
0.1.0b2/recipes/: index.html
0.1.0b3/: 404.html  index.html  sitemap.xml
0.1.0b3/migration/: index.html
0.1.0b3/recipes/: index.html
0.1.0b5/: 404.html  index.html  sitemap.xml
0.1.0b5/migration/: index.html
0.1.0b5/recipes/: index.html
0.1.0b5/search/: search_index.json
0.1.0b6/: 404.html  index.html  sitemap.xml
0.1.0b6/migration/: index.html
0.1.0b6/recipes/: index.html
0.1.0b6/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/migration/: index.html
0.2.0/recipes/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/migration/: index.html
0.3.0/recipes/: index.html
0.3.0/search/: search_index.json
benchmarks/: README.md  asgi.py  asgi_settings.py  configs.py  conftest.py  pytest.ini  runner.py  settings.py  test_throughput.py  urls.py
crates/django-cachex-redis-rs/: Cargo.toml  README.md  pyproject.toml
crates/django-cachex-redis-rs/python/django_cachex/adapters/: _redis_rs.pyi
crates/django-cachex-redis-rs/src/: adapter.rs  async_bridge.rs  client.rs  connection.rs  lib.rs  pipeline.rs  stream_decode.rs  test_helpers.rs
crates/django-cachex-rust/: Cargo.toml  README.md  pyproject.toml
crates/django-cachex-rust/python/django_cachex/: _driver.pyi
crates/django-cachex-rust/src/: async_bridge.rs  client.rs  connection.rs  lib.rs
dev/: 404.html  index.html  sitemap.xml
dev/migration/: index.html
dev/recipes/: index.html
dev/search/: search_index.json
django_cachex/: __init__.py  _driver.pyi  _redis_rs_clients.py  _rust_clients.py  cache.py  compat.py  exceptions.py  lock.py  metrics.py  omit_exception.py  pool.py  script.py  semaphore.py  stampede.py  types.py  util.py  utils.py
django_cachex/adapter/: __init__.py  _rust_pipeline.py  cluster.py  default.py  glide.py  pipeline.py  pipeline_redis_rs.py  pipeline_rust.py  protocols.py  redis_py.py  redis_rs.py  rust.py  sentinel.py  valkey_py.py
django_cachex/adapters/: __init__.py  _async_helpers.py  _pipeline_parsers.py  _redis_rs.pyi  _unified_experiment.py  cluster.py  default.py  pipeline.py  pipeline_redis_rs.py  protocols.py  redis_py.py  redis_rs.py  sentinel.py  valkey_glide.py  valkey_py.py
django_cachex/admin/: __init__.py  admin.py  apps.py  backend.py  cas.py  helpers.py  models.py  queryset.py  service.py  views.py  wrappers.py
django_cachex/cache/: __init__.py  _experimental.py  _semaphore_lua.py  base.py  cluster.py  compat.py  database.py  default.py  glide.py  key_value.py  locmem.py  mixin.py  postgres.py  redis_py.py  redis_rs.py  resp.py  rust.py  sentinel.py  stream.py  sync.py  tiered.py  valkey_glide.py  valkey_py.py
django_cachex/client/: __init__.py  _rust_pipeline.py  cache.py  cluster.py  default.py  glide.py  pipeline.py  postgres.py  rust.py  sentinel.py
django_cachex/compressors/: __init__.py  base.py  gzip.py  identity.py  lz4.py  lzma.py  zlib.py  zstd.py
django_cachex/postgres/: __init__.py  apps.py  models.py  operations.py
django_cachex/serializers/: __init__.py  base.py  json.py  msgpack.py  orjson.py  ormsgpack.py  pickle.py
django_cachex/unfold/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
docs/: index.md  migration.md  recipes.md
docs/development/: locmem-vs-fakeredis.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: api.md  benchmarks.md  changelog.md
docs/user-guide/: admin.md  advanced.md  async.md  clients.md  cluster.md  composite-backends.md  compression.md  configuration.md  sentinel.md  serializers.md
examples/: .gitignore  README.md
examples/full/: README.md  docker-compose.yml  manage.py  pyproject.toml  run.sh
examples/full/full/: __init__.py  apps.py  celery.py  demo.py  settings.py  startup.py  tasks.py  urls.py  views.py  wsgi.py
examples/simple/: README.md  manage.py  run.sh
examples/unfold/: README.md  docker-compose.yml  manage.py  run.sh
main/: 404.html  index.html  sitemap.xml
main/migration/: index.html
main/recipes/: index.html
main/search/: search_index.json
scripts/: gen_driver_stub.py
src/: async_bridge.rs  client.rs  connection.rs  lib.rs  test_helpers.rs
tests/: conftest.py  test_backend_basic.py  test_backend_hashes.py  test_backend_incr.py  test_backend_keys.py  test_backend_lists.py  test_backend_locks.py  test_backend_pipeline.py  test_backend_sets.py  test_backend_sorted_sets.py  test_backend_timeouts.py  test_cache_async.py  test_cache_basic.py  test_cache_keys.py  test_cache_lists.py  test_cache_lists_async.py  test_cache_locks.py  test_cache_options.py  test_cache_scripts.py  test_cache_scripts_async.py  test_cache_sets.py  test_cache_sets_async.py  test_cache_streams.py  test_cache_timeouts.py  test_client.py  test_client_libraries.py  test_cluster_client.py  test_compressor_fallback.py  test_connection_factory.py  test_connection_string.py  test_django_cachex_internals.py  test_django_compat.py  test_django_core_compat.py  test_replica.py  test_sentinel.py  test_serializer_fallback.py  test_serializers.py  test_session.py
tests/admin/: __init__.py  conftest.py  test_cas.py  test_helpers.py  test_views.py  test_wrappers.py
tests/cache/: conftest.py  test_base.py  (+70 more)
(+251 files in other folders)
