[package]
name = "django-cachex"
version = "0.3.0"
edition = "2024"

[lib]
name = "_driver"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

[profile.release]
lto = true
strip = true
