[package]
name = "django-cachex"
version = "0.3.0"
edition = "2024"
description = "Rust I/O driver for django-cachex"
license = "MIT"
repository = "https://github.com/oliverhaas/django-cachex"
publish = false

[lib]
name = "_driver"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

[profile.release]
lto = true
strip = true
