[project]
name = "django-cachex"
version = "0.1.0a1"
description = "Full featured Valkey and Redis cache backend for Django"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["django", "valkey", "redis", "cache", "backend"]
authors = [
  { name = "Oliver Haas", email = "ohaas@e1plus.de" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = ["Django>=5.2,<6.1"]

[project.optional-dependencies]
valkey = ["valkey>=6.1.0,<7"]
libvalkey = ["valkey[libvalkey]>=6.1.0,<7"]
redis = ["redis>=6,<8"]
hiredis = ["redis[hiredis]>=6,<8"]

[project.urls]
Homepage = "https://github.com/oliverhaas/django-cachex"
Documentation = "https://oliverhaas.github.io/django-cachex/"
Repository = "https://github.com/oliverhaas/django-cachex.git"
Changelog = "https://oliverhaas.github.io/django-cachex/reference/changelog/"

[dependency-groups]
dev = [
  "valkey>=6.1.0,<7",
  "redis>=6,<8",
  "backports-zstd==1.3.0; python_version < '3.14'",
  "django-stubs==5.2.9",
  "lz4==4.4.5",
  "msgpack==1.1.2",
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "pytest-asyncio>=1.3.0",
  "pytest-cov==7.0.0",
  "pytest-django==4.11.1",
  "pytest-mock==3.15.1",
  "pytest-xdist==3.8.0",
  "pytest==9.0.2",
  "ruff==0.14.14",
  "testcontainers==4.14.0",
]
docs = ["mkdocs==1.6.1", "mkdocs-material==9.7.1", "mike==2.1.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_cachex"]

[tool.hatch.build.targets.sdist]
include = ["django_cachex", "LICENSE", "README.md"]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A002",    # min/max params match Redis API naming
  "ANN",     # Type annotations - mypy handles this
  "ARG002",  # Unused args for API compatibility
  "COM812",  # Conflicts with ruff-format
  "D",       # Docstrings - will add incrementally
  "E501",    # Line length handled by config
  "EM101",   # Exception strings inline are fine
  "FBT",     # Boolean args common in cache/Redis APIs
  "N818",    # ConnectionInterrupted is established name
  "PERF203", # try/except in loop is fine here
  "PERF403", # Manual list comprehension is intentional
  "PLC0415", # Dynamic imports intentional
  "PLR0913", # Many args needed for Redis operations
  "PLR2004", # Magic values like -2 for TTL are domain-specific
  "RET504",  # Unnecessary assignment - readability
  "RUF022",  # __all__ is intentionally grouped, not sorted
  "SLF001",  # Private member access needed for internals
  "TC001",   # Type checking import style preference
  "TC003",   # Type checking import style preference
  "TRY003",  # Long exception messages are fine
  "TRY300",  # try/except/return pattern is fine
  "UP031",   # % format is fine
  "SIM108",  # Ternary not always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ARG",     # Unused arguments common in fixtures
  "DTZ005",  # Timezone-naive datetime okay in tests
  "F841",    # Unused variables okay in tests
  "PT006",   # Parametrize tuple style is preference
  "PT011",   # Broad pytest.raises okay in some tests
  "PT013",   # pytest import style is preference
  "PT018",   # Compound assertions okay in tests
  "RUF002",  # Unicode in docstrings is fine
  "RUF015",  # next(iter()) vs slice is preference
  "S101",    # assert in tests
  "S105",    # Hardcoded passwords in test settings
  "S301",    # pickle in tests is fine
  "S311",    # random is fine for tests
]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
pretty = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = false
# These error codes are disabled due to redis-py type annotation issues.
# See: https://github.com/redis/redis-py/issues/3497
# See: https://github.com/redis/redis-py/issues/3107
disable_error_code = [
  "arg-type",   # redis-py expects str keys but we use KeyT (str | bytes | memoryview)
  "assignment", # Redis vs RedisCluster type assignments in cluster client
  "type-var",   # TypeVar issues with redis-py generics (e.g., zadd)
]

[tool.django-stubs]
django_settings_module = "tests.settings.base"

[[tool.mypy.overrides]]
module = "lz4.frame"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xdist.scheduler"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "backports.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["compression", "compression.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "msgpack"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "valkey.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[tool.ty.rules]
# Error on unused ty: ignore comments
unused-ignore-comment = "error"

[tool.ty.analysis]
# Ignore standard `# type: ignore` comments - only respect `# ty: ignore`
respect-type-ignore-comments = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.base"
addopts = "--cov=django_cachex --cov-report=term-missing --cov-report=xml --no-cov-on-fail"
pythonpath = ["tests"]
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
precision = 1
skip_covered = true
