[project]
name = "django-cachex"
version = "0.3.0"
description = "Full featured Valkey and Redis cache backend for Django"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
keywords = ["django", "valkey", "redis", "cache", "backend"]
authors = [{ name = "Oliver Haas", email = "ohaas@e1plus.de" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading :: 1 - Unstable",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = ["Django>=6,<7"]

[project.optional-dependencies]
valkey-py = ["valkey>=6.1.0,<7"]
libvalkey = ["valkey[libvalkey]>=6.1.0,<7"]
redis-py = ["redis>=6,<8"]
hiredis = ["redis[hiredis]<8,>=6"]
# Rust I/O driver — separate binary package, prebuilt wheels for Linux x86_64 only
redis-rs = ["django-cachex-redis-rs==0.3.0"]
# valkey-glide — Rust-cored Valkey client (sync + async are separate distributions)
valkey-glide = ["valkey-glide-sync>=2.3,<3", "valkey-glide>=2.3,<3"]
# Compressors
lz4 = ["lz4>=4.4.0"]
# Serializers
msgpack = ["msgpack>=1.1.0"]
ormsgpack = ["ormsgpack>=1.10.0"]
orjson = ["orjson>=3.10.0"]

[project.urls]
Homepage = "https://github.com/oliverhaas/django-cachex"
Documentation = "https://oliverhaas.github.io/django-cachex/"
Repository = "https://github.com/oliverhaas/django-cachex.git"
Changelog = "https://oliverhaas.github.io/django-cachex/reference/changelog/"

[dependency-groups]
dev = [
  "valkey[libvalkey]==6.1.1",
  "redis[hiredis]==7.4.0",
  "beautifulsoup4==4.14.3",
  "django-stubs==6.0.3",
  "djlint==1.36.4",
  "lz4==4.4.5",
  "maturin==1.13.1",
  "msgpack==1.1.2",
  "ormsgpack==1.12.2",
  "mypy==1.20.2",
  "pre-commit==4.6.0",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "pytest-flakefinder==1.1.0",
  "pytest-mock==3.15.1",
  "pytest-xdist==3.8.0",
  "pytest==9.0.3",
  "ruff==0.15.12",
  "testcontainers==4.14.2",
  "ty==0.0.34",
  "types-docker==7.1.0.20260409",
  # ASGI benchmark only — granian (real ASGI server) + httpx (load gen)
  "granian>=2.6,<3",
  "httpx>=0.28,<0.29",
  # Rust I/O driver: workspace member so `uv sync` builds it for tests/benchmarks
  "django-cachex-redis-rs",
]
# valkey-glide ships prebuilt wheels only for cp312 (works on cp314 GIL build
# via FFI, but cp314t free-threaded has no wheel and the source build needs
# protoc). Keep it out of `dev` so `uv sync` works on either interpreter; opt
# in via `uv sync --extra valkey-glide` when you want to run the glide bench
# slice or work on the backend.
docs = ["mkdocs==1.6.1", "mkdocs-material==9.7.6", "mike==2.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_cachex"]
# _driver.pyi is the type stub for the optional Rust extension. It lives
# alongside django_cachex source so type checkers find it during dev, but
# it ships with the django-cachex-redis-rs binary package, not this one.
exclude = ["**/_driver.pyi"]

[tool.hatch.build.targets.sdist]
include = ["django_cachex/**", "README.md", "LICENSE", "pyproject.toml"]
exclude = ["**/_driver.pyi"]

[tool.uv.workspace]
members = ["crates/*"]

[tool.uv.sources]
django-cachex-redis-rs = { workspace = true }

[tool.ruff]
target-version = "py314"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A002",     # min/max params match Redis API naming (ZCOUNT key min max, etc.)
  "A003",     # Cache methods named `set`/`type` mirror Redis API; `self.set(...)` is unambiguous.
  "ANN401",   # Any is correct for cache values (arbitrary Python objects)
  "ARG002",   # Unused args: API compat (key in get_client), stub classes (*args, **kwargs)
  "ASYNC109", # timeout param is cache TTL, not asyncio.timeout
  "COM812",   # Conflicts with ruff-format
  "D",        # Docstrings - will add incrementally
  "E501",     # Line length handled by config
  "EM",       # Exception strings inline are fine
  "FBT",      # Boolean params match Redis API (approximate, nomkstream, mkstream, noack, justid, force, full)
  "PERF203",  # try/except in loop is fine here
  "PLC0415",  # Dynamic imports intentional
  "PLR0913",  # Too many args - Redis commands have many options (zadd, lock, lpos, blmove)
  "PLR2004",  # Magic values like -2 for TTL are Redis-documented return codes
  "SLF001",   # Private member access needed for Cache/CacheClient delegation
  "TRY003",   # Long exception messages are helpful for debugging
  "TRY300",   # return in try block is cleaner for this pattern (Redis call, decode, return)
  "SIM108",   # Ternary not always clearer
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true      # Allow Any for *args and **kwargs
suppress-none-returning = true # Don't require -> None on functions

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN",    # Type annotations not required in tests
  "ARG",    # Unused arguments common in fixtures
  "DTZ005", # Timezone-naive datetime okay in tests
  "F841",   # Unused variables okay in tests
  "FBT",    # Boolean args fine in test fixtures and test calls
  "PT006",  # Parametrize tuple style is preference
  "PT011",  # Broad pytest.raises okay in some tests
  "PT013",  # pytest import style is preference
  "PT018",  # Compound assertions okay in tests
  "RUF002", # Unicode in docstrings is fine
  "RUF015", # next(iter()) vs slice is preference
  "S101",   # assert in tests
  "S105",   # Hardcoded passwords in test settings
  "S301",   # pickle in tests is fine
  "S311",   # random is fine for tests
]
"benchmarks/**" = [
  "ANN",     # Type annotations not required in benchmarks
  "ARG",     # Unused fixture args common
  "BLE001",  # Broad except in measurement code is fine
  "PERF401", # Loop append patterns are clearer here
  "RUF046",  # int(round()) is intentional for indexing
  "S101",    # assert
  "T201",    # print() is the output mechanism
  "TC001",   # Don't bother with TYPE_CHECKING gymnastics
  "TC003",
]
"scripts/**" = [
  "ANN",    # Annotations not required in one-shot generator scripts
  "INP001", # Standalone scripts, not a package
  "T201",   # print() is the output mechanism
]

[tool.mypy]
python_version = "3.14"
plugins = ["mypy_django_plugin.main"]
pretty = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = false

[tool.django-stubs]
django_settings_module = "tests.settings.base"

[[tool.mypy.overrides]]
module = "lz4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xdist.scheduler"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "msgpack"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ormsgpack"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "orjson"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

# valkey-glide ships only as an optional install — let mypy skip it when
# absent, and ignore the spike file's many Liskov violations from the
# Design B overrides until/unless we keep this backend long-term.
[[tool.mypy.overrides]]
module = "glide.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "glide_sync.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "django_cachex.adapters.valkey_glide"
ignore_errors = true

[tool.ty.rules]
# Disable rules that conflict with intentional Django extensions:
# - We extend return types (set returns bool|None, delete_many returns int)
# - Parameter types widened/narrowed for better API
invalid-method-override = "ignore"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.analysis]
# Ignore `# type: ignore` comments (those are for mypy)
# ty uses `# ty: ignore` for its own suppressions
respect-type-ignore-comments = false

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
# Tests intentionally access private attributes for verification
unresolved-attribute = "ignore"
# Tests verify edge cases with generators and None values
invalid-argument-type = "ignore"
# Tests patch timezone.now for expiry testing
invalid-assignment = "ignore"

# orjson is an opt-in extra (no cp314t wheel as of 3.11.8); ty mustn't fail
# the local check when the package isn't installed in the dev venv.
[[tool.ty.overrides]]
include = ["django_cachex/serializers/orjson.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.base"
addopts = "--cov=django_cachex --cov-report=term-missing --cov-report=xml --no-cov-on-fail"
pythonpath = ["tests"]
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
# types.py contains only type aliases and Protocol definitions - no executable code.
# serializers/base.py is an abstract base class with NotImplementedError stubs.
omit = [
  "tests/*",
  "django_cachex/types.py",
  "django_cachex/serializers/base.py",
]

[tool.coverage.report]
precision = 2
skip_covered = true
