[package]
name = "django-cachex-rust"
version = "0.3.0"
edition = "2024"
description = "Rust I/O driver for django-cachex"
license = "MIT"
repository = "https://github.com/oliverhaas/django-cachex"
publish = false

[lib]
name = "_driver"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
redis = { version = "1", features = [
  "tokio-comp",
  "connection-manager",
  "cluster",
  "cluster-async",
  "tokio-rustls-comp",
  "tls-rustls-insecure",
  "cache-aio",
] }
rustls = { version = "0.23", features = ["ring"] }

[profile.release]
lto = true
strip = true
