[project]
name = "django-cachex-full-example"
version = "0"
description = "Full example demonstrating django-cachex with multiple cache backends and the cache admin"
requires-python = ">=3.14"
dependencies = ["django-cachex", "celery[redis]>=5,<6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["full"]

[tool.uv.sources]
django-cachex = { workspace = true }
